# iu9-neural-networks

./: .gitignore  README.md
hw1/report/: report.tex
hw1/src/: CMakeLists.txt  activation_function.h  data_supplier.cc  data_supplier.h  main.cc  perceptron.cc  perceptron.h  util.h
hw2/data/: README.md
hw2/report/: report.tex  ДЗ№2_Афанасьев_И._ИУ9-71Б.tex
hw2/src/: CMakeLists.txt  cost_function.h  data_supplier.cc  data_supplier.h  main.cc  perceptron.cc  perceptron.h
hw3/report/: ДЗ№3_Афанасьев_И._ИУ9-71Б.tex
hw3/src/: CMakeLists.txt  main.cc
hw4/report/: ДЗ№4_Афанасьев_И._ИУ9-71Б.tex
hw4/src/: CMakeLists.txt  activation_function.h  chromosome.cc  chromosome.h  data_supplier.cc  data_supplier.h  fitness_function.cc  fitness_function.h  genetic_algorithm.cc  genetic_algorithm.h  main.cc  perceptron.cc  perceptron.h
hw5/: hw5.ipynb  main.py  requirements.txt
hw5/report/: ДЗ№5_Афанасьев_И._ИУ9-71Б.tex
hw5/sample/: hw5.ipynb  hw5.py
lab1/data/: numbers.csv
lab1/src/: CMakeLists.txt  activation_function.h  cost_function.h  data_supplier.cc  data_supplier.h  generator.cc  generator.h  main.cc  peceptron.cc  perceptron.h  util.h
